4.4.9 -> 4.5:
	- glen: db4.8 support (arekm@PLD).
	- glen: update db3/configure from rpm5 trunk
	- glen: avoid -L poisoning in *.la (qboosh@PLD).
	- glen: fix build with as-needed (needs patched libtool to trigger it) (sparky@PLD).
	- glen: prevent from passing open file descriptors to pre/post scripts (one fd (12?) was terminal, second (11?) .rpm file) (qboosh@PLD).
	- jbj/glen: strip possible chroot prefix from db opened paths in Open(2) wrapper. LP#347749
	- jbj: reserve ~1K in  RPMSIGTAG_PADDING for now.
	- jbj: add RPMSIGTAG_PADDING to force metadata header alignment in file.
	- jbj: ensure that PLD Linux setup & FHS packages install correctly.
	- jbj: wrapper for open(2).
	- glen: merge :shescape from rpm5 trunk (code in this branch read out of buffer bounds)
	- proyvind: fix segfault with relative paths due to missing header inclusion.
	- proyvind: fix build breakage without selinux due to unresolved matchpathcon_fini().
	- proyvind: backport xz/lzma payload support through liblzma.
	- proyvind: make OSSP uuid support optional.
	- glen: set failed state on upgrade if package reopen failed to avoid losing pkg info from db
	- glen: scripts/rpm2cpio: avoid awk, use pure echo (from PLD Linux)
	- glen: use modern chown syntax in setugids popt macro
	- glen: perl makefile: respect LIBS from configure
	- glen: update php dependency generators from PLD Linux
	- jbj: add a relation to to force install-before-erase.
	- jbj: display dependency loops as an error for now.
	- glen: do not skip %clean from spec file
	- robert: install rpmdeps and debugedit to pkglibdir as on HEAD
	- jbj: fix: python ts.hdrFromFdno(fdno) segfault.
	- jbj: use Realpath(3) so that RPMTAG_PACKAGEORIGIN has absolute path.
	- jbj: rpmio: add Realpath(3).
	- robert: python: backport rpm.archscore() and rpm.platformscore()
	    for smart depsolving usage
	- robert: rpmrepo: enable/disable sqlite dependent on rest of rpm
	- jbj: fix: allocate Icon: buffer after iconsize is initialized.